<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>orb_slam3_ros2</name>
  <version>1.0.0</version>
  <description>ORB-SLAM3 ROS2 wrapper for monocular camera</description>
  <maintainer email="orbslam@unizar.es">Carlos Campos</maintainer>
  <license>GPLv3</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>tf2_ros</depend>
  <depend>geometry_msgs</depend>
  <depend>image_transport</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
